# Telephone-Directory-CPP

./: CMakeLists.txt  README.md  main.cpp  teldir.txt
FileIO/: FileManager.cpp  FileManager.h
LinkedList/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
Tests/: CMakeLists.txt  unittests.cpp
User/: User.cpp  User.h
UserListManagement/: UserManager.cpp  UserManager.h
UserListManagment/: UserManager.cpp  UserManager.h
